# SDKTools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Source.cpp  config.h  echo-server.py  handleCmd.h  mainctrl.cpp  mainctrl.h  openDump.bat  sendMail2.py  sendMail3.py  sendMailBase.py  tcpBase.cpp  tcpBase.h  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h  vcpkg.json
Sources/: ConsoleUtil.h  Source.cpp  config.h  handleCmd.h  httpClient.cpp  httpClient.h  mainctrl.cpp  mainctrl.h  tcpClient.h  tcpServer.cpp  tcpServer.h
